# Data-Analysis-101

./: Comparison.md  DP_playground.py  DataFlowGov.md  README.md  data_prep.ipynb  data_validation.ipynb  duckdb.ipynb  pandas.ipynb  penguins_info.csv  penguins_measurements.csv  penguins_measurements.xlsx  polars.ipynb  polars_marimo.py  pyproject.toml
Data_Prep/: data_prep.ipynb
Docs/: Comparison.md
Lesson01/: data_validation.ipynb  duckdb.ipynb  pandas.ipynb  polars.ipynb
Marimo/: DP_salary_demo_marimo.py  data_validation_marimo.py
Tutorial_Data/: penguins_info.csv  penguins_measurements.xlsx  penguins_test1.csv  penguins_test2_1.csv  penguins_test2_2.csv
