[project]
name = "da101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.1.3",
    "fastexcel>=0.12.0",
    "ipykernel>=6.29.5",
    "marimo>=0.10.7",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "patito>=0.8.2",
    "polars>=1.18.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.0",
]
